added register fetch in DB

--- a/src/main/resources/static/register.html
+++ b/src/main/resources/static/register.html
@@ -61,7 +61,7 @@
                                             id="txtRepetirPassword" placeholder="Repeat Password">
                                     </div>
                                 </div>
-                                <a href="login.html" class="btn btn-primary btn-user btn-block">
+                                <a onclick="registrarUsuarios()" href="#" class="btn btn-primary btn-user btn-block">
                                     Registrarse
                                 </a>
                             </form>
