--- a/src/main/resources/static/login.html
+++ b/src/main/resources/static/login.html
@@ -44,28 +44,22 @@
                                     <form class="user">
                                         <div class="form-group">
                                             <input type="email" class="form-control form-control-user"
-                                                id="exampleInputEmail" aria-describedby="emailHelp"
-                                                placeholder="Enter Email Address...">
+                                                id="txtEmail" aria-describedby="emailHelp"
+                                                placeholder="Email ">
                                         </div>
                                         <div class="form-group">
                                             <input type="password" class="form-control form-control-user"
-                                                id="exampleInputPassword" placeholder="Password">
+                                                id="txtPassword" placeholder="Password">
                                         </div>
-                                        <div class="form-group">
-                                            <div class="custom-control custom-checkbox small">
-                                                <input type="checkbox" class="custom-control-input" id="customCheck">
-                                                <label class="custom-control-label" for="customCheck">Remember
-                                                    Me</label>
-                                            </div>
-                                        </div>
-                                        <a href="index.html" class="btn btn-primary btn-user btn-block">
+
+                                        <a onclick="iniciarSesion()" href="#" class="btn btn-primary btn-user btn-block">
                                             Iniciar Sesion
                                         </a>
 
                                     </form>
                                     <hr>
                                     <div class="text-center">
-                                        <a class="small" href="forgot-password.html">Forgot Password?</a>
+                                        <a class="small" href="forgot-password.html">Olvido Contrasñea?</a>
                                     </div>
                                     <div class="text-center">
                                         <a class="small" href="register.html">Crea una cuenta</a>
